--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Nightwing",
   "description": "Dark VS Code color theme for night coders.",
   "version": "1.0.0",
+  "publisher": "bwielgosz",
   "engines": {
     "vscode": "^1.47.0"
   },
