--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "categories": [
     "Themes"
   ],
-  "icon": "./icon.png",
+  "icon": "icon.png",
   "galleryBanner": {
     "color": "#01111f",
     "theme": "light"
