fix color theme in gallery banner

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "icon": "icon.png",
   "galleryBanner": {
     "color": "#01111f",
-    "theme": "light"
+    "theme": "dark"
   },
   "contributes": {
     "themes": [
